# basesIISierra

./: README.md  pyproject.toml
SCRIPTS_DB/: scriptCreationSQL.sql  scriptSeedSQL.sql
SCRIPTS_DB/data/: daily_stats.json  log_events.json  search_index.json
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: EmptyState.tsx  ErrorMessage.tsx  Footer.tsx  Header.tsx  ResourceCard.tsx  SearchBar.tsx
frontend/src/pages/: Categories.tsx  Home.tsx  ResourceDetail.tsx  Resources.tsx  Search.tsx  Stats.tsx
frontend/src/services/: categories.ts  logs.ts  programs.ts  resources.ts  search.ts  stats.ts
frontend/src/types/: index.ts
src/app/: main.py
src/app/api/: categories.py  logs.py  programs.py  resources.py  search.py  stats.py
src/app/batch/: build_search_index.py  generate_daily_stats.py
src/app/models/: schemas.py  sql_models.py
src/app/nosql/: mongo_db.py
src/app/repositories/nosql/: log_repository.py  search_repository.py
src/app/repositories/sql/: category_repository.py  daily_stats_repository.py  program_repository.py  resource_repository.py
src/app/services/: category_services.py  log_services.py  program_services.py  resource_services.py  search_services.py
src/app/sql/: database.py
