[project]
name = "digital-library-api"
version = "0.1.0"
description = "Digital Library API for Workshop 3"
authors = [
    {name = "DavidMunoz",email = "dsmunoza@udistrital.edu.co"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymongo (>=4.15.4,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg[binary] (>=3.2.13,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "digital-library-api"
version = "0.1.0"
description = "Digital Library API for Workshop 3"
authors = ["DavidMunoz <dsmunoza@udistrital.edu.co>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]
